@@ -11,7 +11,7 @@
 #include "tests/DCPS/FooType5/FooNoKeyTypeSupportImpl.h"
 
 // Only for Microsoft VC6
-#if defined ((_MSC_VER) && (_MSC_VER >= 1200) && (_MSC_VER < 1300))
+#if defined (_MSC_VER) && (_MSC_VER >= 1200) && (_MSC_VER < 1300)
 
 // Added unused arguments with default value to work around with vc6 
 // bug on template function instantiation.
