@@ -10,7 +10,7 @@
 #include "ace/OS_NS_unistd.h"
 
 // Only for Microsoft VC6
-#if defined ((_MSC_VER) && (_MSC_VER >= 1200) && (_MSC_VER < 1300))
+#if defined (_MSC_VER) && (_MSC_VER >= 1200) && (_MSC_VER < 1300)
 
 // Added unused arguments with default value to work around with vc6 
 // bug on template function instantiation.
